UI优化,数据更新

--- a/eCharts/mine/stat.html
+++ b/eCharts/mine/stat.html
@@ -18,12 +18,16 @@
 <div class="alert-container" id="alertContainer">
     <div class="alert-title">数据预警通知</div>
     <div class="alert-content" id="alert30">
-        <p class="alert-message">30天数据预警，预计恢复时间：</p>
+        <p class="alert-message">30天数据现值预警，预计恢复时间：</p>
         <p class="alert-date" id="message30">-</p>
     </div>
-    <div class="alert-content" id="alert90">
-        <p class="alert-message">90天数据预警，预计恢复时间：</p>
-        <p class="alert-date"  id="message90">-</p>
+    <div class="alert-content" id="alert30Compare">
+        <p class="alert-message">30天数据同比预警，预计恢复时间：</p>
+        <p class="alert-date" id="message30Compare">-</p>
+    </div>
+    <div class="alert-content" id="alert90Compare">
+        <p class="alert-message">90天数据同比预警，预计恢复时间：</p>
+        <p class="alert-date"  id="message90Compare">-</p>
     </div>
 </div>
 <div id="monthStat" style="width: 900px;height:400px;"></div>
