--- a/eCharts/mine/stat.html
+++ b/eCharts/mine/stat.html
@@ -25,6 +25,10 @@
         <p class="alert-message">30天数据现值预警，预计恢复时间：</p>
         <p class="alert-date" id="message30">-</p>
     </div>
+    <div class="alert-content" id="alert90">
+        <p class="alert-message">90天数据现值预警，预计恢复时间：</p>
+        <p class="alert-date" id="message90">-</p>
+    </div>
     <div class="alert-content" id="alert30Compare">
         <p class="alert-message">30天数据同比预警，预计恢复时间：</p>
         <p class="alert-date" id="message30Compare">-</p>
@@ -48,12 +52,10 @@
     .alert-container {
         background-color: #fff;
         border-bottom: 1px solid #ddd;
-        padding: 5px;
-        border-radius: 5px;
+        padding: 15px;
         /*max-width: 600px;*/
         /*margin: auto;*/
         display: none;
-        margin-bottom: 20px;
     }
 
     .alert-title {
